--- a/index.html
+++ b/index.html
@@ -53,43 +53,67 @@
         position: relative;
       }
 
-      body::before {
-        content: "";
-        position: absolute;
+      /* --- Aurora Background --- */
+      #aurora-background {
+        position: fixed;
         top: 0;
         left: 0;
-        right: 0;
-        bottom: 0;
-        background: radial-gradient(
-          circle at 20% 20%,
-          rgba(0, 122, 255, 0.1),
-          transparent 30%
-        );
-        animation: move-gradient 20s linear infinite;
+        width: 100%;
+        height: 100%;
         z-index: 0;
+        overflow: hidden;
+        filter: blur(100px);
+        opacity: 0.7;
       }
 
-      @keyframes move-gradient {
-        0% {
-          background: radial-gradient(
-            circle at 20% 20%,
-            rgba(0, 122, 255, 0.1),
-            transparent 30%
-          );
+      .aurora-light {
+        position: absolute;
+        border-radius: 50%;
+      }
+
+      .aurora-light:nth-child(1) {
+        width: 800px;
+        height: 800px;
+        background: var(--accent-primary);
+        animation: aurora1 25s infinite alternate ease-in-out;
+      }
+
+      .aurora-light:nth-child(2) {
+        width: 600px;
+        height: 600px;
+        background: #5856d6;
+        animation: aurora2 20s infinite alternate ease-in-out;
+      }
+
+      .aurora-light:nth-child(3) {
+        width: 700px;
+        height: 700px;
+        background: #34c759;
+        animation: aurora3 30s infinite alternate ease-in-out;
+      }
+
+      @keyframes aurora1 {
+        from {
+          transform: translate(-40vw, -40vh) rotate(0deg);
         }
-        50% {
-          background: radial-gradient(
-            circle at 80% 80%,
-            rgba(0, 122, 255, 0.1),
-            transparent 30%
-          );
+        to {
+          transform: translate(40vw, 50vh) rotate(180deg);
         }
-        100% {
-          background: radial-gradient(
-            circle at 20% 20%,
-            rgba(0, 122, 255, 0.1),
-            transparent 30%
-          );
+      }
+      @keyframes aurora2 {
+        from {
+          transform: translate(50vw, -30vh) rotate(0deg);
+        }
+        to {
+          transform: translate(-20vw, 40vh) rotate(240deg);
+        }
+      }
+      @keyframes aurora3 {
+        from {
+          transform: translate(-20vw, 60vh) rotate(0deg);
+        }
+        to {
+          transform: translate(30vw, -50vh) rotate(360deg);
         }
       }
 
@@ -105,7 +129,7 @@
       }
 
       .header,
-      .waitlist-form,
+      .email-input,
       .app-animation-container {
         opacity: 0;
         animation: fadeAndSlideUp 0.8s ease-out forwards;
@@ -114,11 +138,11 @@
       .header {
         animation-delay: 0.2s;
       }
-      .waitlist-form {
+      .email-input {
         animation-delay: 0.4s;
       }
       .app-animation-container {
-        animation-delay: 0.6s;
+        animation-delay: 0.7s;
       }
 
       @keyframes fadeAndSlideUp {
@@ -199,27 +223,94 @@
         box-shadow: 0 0 0 3px var(--accent-glow);
       }
 
-      .submit-button {
-        background-color: var(--accent-primary);
-        color: white;
-        font-size: 1rem;
-        font-weight: 500;
-        padding: 0.875rem 1.5rem;
-        border: none;
-        border-radius: 0.5rem;
+      /* --- Shiny Button --- */
+      .shiny-button {
+        --x: 100%;
+        position: relative;
         cursor: pointer;
+        padding: 0.625rem 1.5rem;
+        border-radius: 0.5rem;
+        border: none;
+        background-color: var(--accent-primary);
         transition:
           transform 0.2s ease,
-          box-shadow 0.2s ease;
+          box-shadow 0.3s ease-in-out;
+        opacity: 0;
+        animation:
+          shiny-button-load 0.8s ease-out 0.5s forwards,
+          shiny-button-shine 4s 1.5s infinite;
       }
 
-      .submit-button:hover {
-        transform: scale(1.05);
-        box-shadow: 0 0 15px var(--accent-glow);
+      .shiny-button::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        border-radius: inherit;
+        padding: 1px;
+        background: linear-gradient(
+          -75deg,
+          rgba(255, 255, 255, 0.1) calc(var(--x) + 20%),
+          rgba(255, 255, 255, 0.6) calc(var(--x) + 25%),
+          rgba(255, 255, 255, 0.1) calc(var(--x) + 100%)
+        );
+        -webkit-mask: linear-gradient(black, black) content-box,
+          linear-gradient(black, black);
+        mask: linear-gradient(black, black) content-box,
+          linear-gradient(black, black);
+        -webkit-mask-composite: destination-out;
+        mask-composite: exclude;
       }
 
-      .submit-button:active {
-        transform: scale(1);
+      .shiny-button:hover {
+        box-shadow: 0 0 20px rgba(0, 122, 255, 0.5);
+      }
+
+      .shiny-button:active {
+        transform: scale(0.97);
+      }
+
+      @keyframes shiny-button-load {
+        from {
+          transform: scale(0.8);
+          opacity: 0;
+        }
+        to {
+          transform: scale(1);
+          opacity: 1;
+        }
+      }
+
+      @keyframes shiny-button-shine {
+        0% {
+          --x: 100%;
+        }
+        75% {
+          --x: -100%;
+        }
+        100% {
+          --x: -100%;
+        }
+      }
+
+      .shiny-button-text {
+        position: relative;
+        color: white;
+        font-size: 0.875rem;
+        font-weight: 500;
+        text-transform: uppercase;
+        letter-spacing: 0.05em;
+        -webkit-mask-image: linear-gradient(
+          -75deg,
+          white calc(var(--x) + 20%),
+          transparent calc(var(--x) + 30%),
+          white calc(var(--x) + 100%)
+        );
+        mask-image: linear-gradient(
+          -75deg,
+          white calc(var(--x) + 20%),
+          transparent calc(var(--x) + 30%),
+          white calc(var(--x) + 100%)
+        );
       }
 
       /* --- App Animation --- */
@@ -407,6 +498,11 @@
     </style>
   </head>
   <body>
+    <div id="aurora-background">
+      <div class="aurora-light"></div>
+      <div class="aurora-light"></div>
+      <div class="aurora-light"></div>
+    </div>
     <main id="main-content">
       <div class="header">
         <div class="logo"> Blueprinter</div>
@@ -430,7 +526,9 @@
           placeholder="you@email.com"
           required
         />
-        <button type="submit" class="submit-button">Join Waitlist</button>
+        <button type="submit" class="shiny-button">
+          <span class="shiny-button-text">Join Waitlist</span>
+        </button>
       </form>
 
       <div class="app-animation-container">
