--- a/index.html
+++ b/index.html
@@ -53,67 +53,31 @@
         position: relative;
       }
 
-      /* --- Aurora Background --- */
-      #aurora-background {
+      /* --- Minimalist Gradient Background --- */
+      body::before {
+        content: "";
         position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        top: -50vh;
+        left: -50vw;
+        width: 200vw;
+        height: 200vh;
         z-index: 0;
-        overflow: hidden;
-        filter: blur(100px);
-        opacity: 0.7;
+        background: radial-gradient(
+          circle,
+          var(--accent-primary),
+          transparent 40%
+        );
+        opacity: 0.15;
+        animation: move-background 40s infinite alternate linear;
+        pointer-events: none;
       }
 
-      .aurora-light {
-        position: absolute;
-        border-radius: 50%;
-      }
-
-      .aurora-light:nth-child(1) {
-        width: 800px;
-        height: 800px;
-        background: var(--accent-primary);
-        animation: aurora1 25s infinite alternate ease-in-out;
-      }
-
-      .aurora-light:nth-child(2) {
-        width: 600px;
-        height: 600px;
-        background: #5856d6;
-        animation: aurora2 20s infinite alternate ease-in-out;
-      }
-
-      .aurora-light:nth-child(3) {
-        width: 700px;
-        height: 700px;
-        background: #34c759;
-        animation: aurora3 30s infinite alternate ease-in-out;
-      }
-
-      @keyframes aurora1 {
+      @keyframes move-background {
         from {
-          transform: translate(-40vw, -40vh) rotate(0deg);
+          transform: translate(0, 0);
         }
         to {
-          transform: translate(40vw, 50vh) rotate(180deg);
-        }
-      }
-      @keyframes aurora2 {
-        from {
-          transform: translate(50vw, -30vh) rotate(0deg);
-        }
-        to {
-          transform: translate(-20vw, 40vh) rotate(240deg);
-        }
-      }
-      @keyframes aurora3 {
-        from {
-          transform: translate(-20vw, 60vh) rotate(0deg);
-        }
-        to {
-          transform: translate(30vw, -50vh) rotate(360deg);
+          transform: translate(50vw, 50vh);
         }
       }
 
@@ -201,11 +165,12 @@
 
       .email-input {
         flex-grow: 1;
+        height: 46px;
         background-color: var(--surface);
         border: 1px solid var(--surface-border);
         color: var(--text-primary);
         font-size: 1rem;
-        padding: 0.875rem 1rem;
+        padding: 0 1rem;
         border-radius: 0.5rem;
         transition:
           border-color 0.2s ease,
@@ -228,7 +193,8 @@
         --x: 100%;
         position: relative;
         cursor: pointer;
-        padding: 0.625rem 1.5rem;
+        height: 46px;
+        padding: 0 1.5rem;
         border-radius: 0.5rem;
         border: none;
         background-color: var(--accent-primary);
@@ -239,6 +205,9 @@
         animation:
           shiny-button-load 0.8s ease-out 0.5s forwards,
           shiny-button-shine 4s 1.5s infinite;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
 
       .shiny-button::before {
@@ -498,11 +467,6 @@
     </style>
   </head>
   <body>
-    <div id="aurora-background">
-      <div class="aurora-light"></div>
-      <div class="aurora-light"></div>
-      <div class="aurora-light"></div>
-    </div>
     <main id="main-content">
       <div class="header">
         <div class="logo"> Blueprinter</div>
