fixing success page

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
         <input
           type="hidden"
           name="redirect"
-          value="/success.html"
+          value="https://blueprinter.app/success.html"
         />
         <input type="checkbox" name="botcheck" style="display: none" />
 
