--- a/success.html
+++ b/success.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <style>
@@ -16,6 +16,9 @@
         --text-primary: #f2f2f2;
         --text-secondary: #a3a3a3;
         --accent-primary: #007aff;
+        --success-green: #34c759;
+        --surface: #1c1c1e;
+        --surface-border: #38383a;
       }
       body {
         font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -23,7 +26,6 @@
         background-color: var(--background);
         color: var(--text-primary);
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
         text-align: center;
@@ -62,17 +64,78 @@
         position: relative;
         z-index: 1;
       }
+      .success-container {
+        background: linear-gradient(
+          145deg,
+          rgba(255, 255, 255, 0.03),
+          rgba(255, 255, 255, 0)
+        );
+        border: 1px solid var(--surface-border);
+        border-radius: 1rem;
+        padding: 2.5rem 3rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        box-shadow:
+          0 20px 25px -5px rgba(0, 0, 0, 0.2),
+          0 8px 10px -6px rgba(0, 0, 0, 0.2);
+        opacity: 0;
+        animation: fadeAndSlideUp 0.8s 0.2s ease-out forwards;
+      }
+      @keyframes fadeAndSlideUp {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+      .checkmark-wrapper {
+        width: 80px;
+        height: 80px;
+        margin-bottom: 0.5rem;
+      }
+      .checkmark__circle {
+        stroke-dasharray: 166;
+        stroke-dashoffset: 166;
+        stroke-width: 3;
+        stroke-miterlimit: 10;
+        stroke: var(--success-green);
+        fill: none;
+        animation:
+          stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) 0.5s forwards;
+      }
+      .checkmark__check {
+        transform-origin: 50% 50%;
+        stroke-dasharray: 48;
+        stroke-dashoffset: 48;
+        stroke-width: 4;
+        stroke: var(--success-green);
+        fill: none;
+        stroke-linecap: round;
+        stroke-linejoin: round;
+        animation:
+          stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 1s forwards;
+      }
+      @keyframes stroke {
+        100% {
+          stroke-dashoffset: 0;
+        }
+      }
       h1 {
-        font-size: 2.5rem;
+        font-size: 2rem;
         font-weight: 700;
-        margin-bottom: 1rem;
+        letter-spacing: -0.02em;
       }
       p {
-        font-size: 1.125rem;
+        font-size: 1rem;
         color: var(--text-secondary);
-        max-width: 450px;
+        max-width: 320px;
         line-height: 1.6;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
       }
       a {
         color: var(--accent-primary);
@@ -87,12 +150,34 @@
   </head>
   <body>
     <main>
-      <h1>You're on the list! ✅</h1>
-      <p>
-        Thanks for joining the waitlist for Blueprinter. We'll be in touch soon
-        with updates and early access.
-      </p>
-      <a href="https://blueprinter.app">Return to Homepage</a>
+      <div class="success-container">
+        <div class="checkmark-wrapper">
+          <svg
+            class="checkmark"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 52 52"
+          >
+            <circle
+              class="checkmark__circle"
+              cx="26"
+              cy="26"
+              r="25"
+              fill="none"
+            />
+            <path
+              class="checkmark__check"
+              fill="none"
+              d="M14.1 27.2l7.1 7.2 16.7-16.8"
+            />
+          </svg>
+        </div>
+        <h1>You're on the list!</h1>
+        <p>
+          Thanks for joining the waitlist for Blueprinter. We'll be in touch
+          soon with updates and early access.
+        </p>
+        <a href="https://blueprinter.app">Return to Homepage</a>
+      </div>
     </main>
   </body>
 </html>
