actually fixing spacing ontop of success page this time

--- a/success.html
+++ b/success.html
@@ -60,7 +60,7 @@
       main {
         position: relative;
         z-index: 1;
-        margin: auto; /* This ensures perfect centering */
+        margin: 4vh auto auto auto; /* Moved up for higher positioning */
       }
       .success-container {
         background: linear-gradient(
@@ -133,6 +133,10 @@
         max-width: 320px;
         line-height: 1.6;
         margin-top: 0.5rem;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
       a {
         color: var(--accent-primary);
