Adjust success page vertical position and center-align message text

--- a/success.html
+++ b/success.html
@@ -60,7 +60,7 @@
       main {
         position: relative;
         z-index: 1;
-        margin: 2vh auto auto auto; /* Moved up for higher positioning */
+        margin: 7vh auto auto auto; /* Adjusted for slightly lower positioning */
       }
       .success-container {
         background: linear-gradient(
