Push success page content significantly lower for better screen centering

--- a/success.html
+++ b/success.html
@@ -60,7 +60,7 @@
       main {
         position: relative;
         z-index: 1;
-        margin: 7vh auto auto auto; /* Adjusted for slightly lower positioning */
+        margin: 25vh auto auto auto; /* Positioned lower on screen */
       }
       .success-container {
         background: linear-gradient(
