--- a/success.html
+++ b/success.html
@@ -60,7 +60,7 @@
       main {
         position: relative;
         z-index: 1;
-        margin: 25vh auto auto auto; /* Positioned lower on screen */
+        margin: auto
       }
       .success-container {
         background: linear-gradient(
